# SimpleCV

./: README.md
canny/: a.out  canny.cpp
cn_vehicle_plate_recognition/: CMakeLists.txt  README.md
cn_vehicle_plate_recognition/include/: stdafx.h
cn_vehicle_plate_recognition/src/: .Resources.cpp.swp  ANNClassifier.cpp  ANNClassifier.h  CMakeLists.txt  CMakeLists.txt.test  OCR.cpp  OCR.h  Plate.cpp  Plate.h  PlateDetection.cpp  PlateDetection.h  Resources.cpp  Resources.h  SVMClassifier.cpp  SVMClassifier.h  StdAfx.h  Util.cpp  Util.h  main.cpp  run.cpp  stdafx.cpp
cn_vehicle_plate_recognition/src/core/: .char.cpp.swp  .feature.cpp.swp  .ocr.cpp.swp  .plate_detect.cpp.swp  char.cpp  feature.cpp  feature.h  ocr.cpp  ocr2.cpp  plate.cpp  plate_detect.cpp  proj_cut.cpp  resource.cpp
cn_vehicle_plate_recognition/src/imgproc/: imgproc.cpp
cn_vehicle_plate_recognition/src/ml/: ann.cpp  svm.cpp
cn_vehicle_plate_recognition/src/tool/: tool.cpp
face_detection_using_haarcascade/: README.md  face_det.py
kmeans_demo_using_opencv/: CMakeLists.txt  README.md
kmeans_demo_using_opencv/src/: CMakeLists.txt  kmeans.cpp
svm_demo_using_opencv/: CMakeLists.txt  README.md
svm_demo_using_opencv/src/: .svm.cpp.swp  CMakeLists.txt  svm.cpp
vehicle_plate_recognition/: CMakeLists.txt  README.md
vehicle_plate_recognition/src/: ANNClassifier.cpp  ANNClassifier.h  CMakeLists.txt  ImageRecognition.cpp  ImageRecognition.h  ImageSegmentation.cpp  ImageSegmentation.h  OCR.cpp  OCR.h  Plate.cpp  Plate.h  PlateDetection.cpp  PlateDetection.h  SVMClassifier.cpp  SVMClassifier.h  (+2 more)
(+12 files in other folders)
