CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT( plate )
FIND_PACKAGE( OpenCV REQUIRED )
ADD_EXECUTABLE( plate  main.cpp stdafx.cpp ./core/plate_detect.cpp ./core/ocr.cpp ./core/char.cpp ./ml/svm.cpp ./core/plate.cpp ./ml/ann.cpp ./tool/tool.cpp ./core/resource.cpp ./imgproc/imgproc.cpp ./core/feature.cpp)
TARGET_LINK_LIBRARIES( plate ${OpenCV_LIBS} )
